<resources>
    <string name="app_name">StatusDesc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="objId">id:</string>
    <string name="firstName">Инициалы:</string>
    <string name="lastName">Убеждения:</string>
    <string name="location">Годы правления:</string>
    <string name="active">Активность</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
